--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>EA Games - Acessibilidade</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#jogos">Jogos</a></li>
+                <li><a href="#acessibilidade">Acessibilidade</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h1>Bem-vindo ao EA Games</h1>
+            <p>Aproveite nossos jogos com recursos de acessibilidade.</p>
+        </section>
+
+        <section id="jogos">
+            <h2>Jogos Populares</h2>
+            <div class="game-card">
+                <img src="fifa.jpg" alt="Capa do jogo FIFA 23" />
+                <h3>FIFA 23</h3>
+                <p>Jogo de futebol que traz novas mecânicas e acessibilidade aprimorada.</p>
+            </div>
+        </section>
+
+        <section id="acessibilidade">
+            <h2>Recursos de Acessibilidade</h2>
+            <ul>
+                <li>Legenda em tempo real</li>
+                <li>Controle por teclado e mouse</li>
+                <li>Contraste elevado para deficientes visuais</li>
+                <li>Leitor de tela para cegos</li>
+            </ul>
+        </section>
+
+        <section id="contato">
+            <h2>Contato</h2>
+            <form>
+                <label for="email">Seu E-mail:</label>
+                <input type="email" id="email" name="email" required>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 EA Games. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
